--- a/counter.html
+++ b/counter.html
@@ -19,7 +19,7 @@
         <button class="increase animate__animated animate__backInLeft">
           Increase
         </button>
-        <button class="reset animate__animated animate__bounceIn">Reset</button>
+        <button class="reset animate__animated animate__bounceIn">Reset to 0</button>
         <button class="decrease animate__animated animate__backInRight">
           Decrease
         </button>
