--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       >
         The Counter Application
       </h1>
-<h1 class="animate__animated animate__rubberBand animate__bounce animate__repeat-2">By Kenny Lau 123</h1>
+<h1 class="animate__animated animate__rubberBand animate__bounce animate__repeat-2">By Kenny Lau</h1>
 
       <a href="./counter.html"
         ><button class="animate__animated animate__heartBeat animate__repeat-2">
